force-app/main/default/objects/skedHC__Support_Guidance__c/skedHC__Support_Guidance__c.object-meta.xml
<CustomObject>
    <label>Support Guidance</label>
    <nameField>
        <displayFormat>SPG-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Guidance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>