force-app/main/default/objects/skedHC__Support_Guidance__c/fields/skedHC__Administration_Method__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Administration_Method__c</fullName>
    <label>Administration Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inhalation</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Nasal</fullName>
            </value>
            <value>
                <fullName>Ocular</fullName>
            </value>
            <value>
                <fullName>Oral</fullName>
            </value>
            <value>
                <fullName>Otic</fullName>
            </value>
            <value>
                <fullName>Rectal</fullName>
            </value>
            <value>
                <fullName>Transdermal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>