force-app/main/default/objects/skedHC__Support_Guidance__c/fields/skedHC__Dosage__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Dosage__c</fullName>
    <label>Dosage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>