force-app/main/default/objects/skedHC__Support_Guidance__c/fields/skedHC__Frequency__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Frequency__c</fullName>
    <label>Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>