force-app/main/default/objects/skedHC__Support_Guidance__c/fields/skedHC__Guidance__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Guidance__c</fullName>
    <label>Guidance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>