force-app/main/default/objects/skedHC__Support_Guidance__c/fields/skedHC__Name__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Name__c</fullName>
    <label>Name</label>
    <type>TextArea</type>
</CustomField>