force-app/main/default/objects/skedHC__Support_Guidance__c/fields/skedHC__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>