force-app/main/default/objects/skedHC__Support_Guidance__c/fields/skedHC__Support_Plan__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Support_Plan__c</fullName>
    <label>Support Plan</label>
    <referenceTo>skedHC__Support_Plan__c</referenceTo>
    <relationshipLabel>Support Guidance</relationshipLabel>
    <relationshipName>Support_Guidance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>