force-app/main/default/objects/skedHC__Support_Guidance__c/recordTypes/skedHC__Alert.recordType-meta.xml
<RecordType>
    <fullName>skedHC__Alert</fullName>
    <active>true</active>
    <label>Alert</label>
</RecordType>