force-app/main/default/objects/skedHC__Support_Guidance__c/recordTypes/skedHC__Guidance.recordType-meta.xml
<RecordType>
    <fullName>skedHC__Guidance</fullName>
    <active>true</active>
    <label>Guidance</label>
</RecordType>