force-app/main/default/objects/skedHC__Support_Guidance__c/recordTypes/skedHC__Medication.recordType-meta.xml
<RecordType>
    <fullName>skedHC__Medication</fullName>
    <active>true</active>
    <label>Medication</label>
</RecordType>